Bug du scroll régler : overflow-y : auto

--- a/facebook/app-theme/specific/_connect.scss
+++ b/facebook/app-theme/specific/_connect.scss
@@ -1,8 +1,8 @@
 /** Wrapper **/
 .connect-wrapper{
   background:url(connectbgblack.jpg) no-repeat fixed;
-  overflow:scroll;
   background-size:cover;
+  overflow-y: auto;
 }
 
 .connect-copyright{
@@ -12,7 +12,7 @@
   right:0;
   margin:0 auto;
   color:#ffffff;
-  padding:15px 0;
+  padding:10px 0;
   text-align:center;
 }
 
